--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>train-ticket</title>
     <script type="text/javascript" src="./main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1 id="price"></h1>
+  </body>
 </html>
